Enhanced AI Smart Selection with Hugging Face Integration

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 VITE_AI_SERVICE_URL=https://your-ai-service.com/api
 VITE_AI_API_KEY=your-api-key-here
 
+# Hugging Face Configuration
+VITE_HUGGINGFACE_API_KEY=your-huggingface-api-key
+VITE_HUGGINGFACE_ENDPOINT=https://your-backend.com/api/ai/huggingface
+
 # U2Net Background Removal Service
 VITE_U2NET_ENDPOINT=https://api.remove.bg/v1.0/removebg
 VITE_U2NET_API_KEY=your-removebg-api-key
